# rectory-apps-updated

./: package.json  pyproject.toml
.github/workflows/: black.yml
accounts/: admin.py  admin_staff_monkeypatch.py  context_processors.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_user_allow_google_hd_bypass.py  0004_alter_user_allow_google_hd_bypass.py
blackbaud/: admin.py  apps.py  models.py
blackbaud/migrations/: 0001_initial.py
calendar_generator/: admin.py  apps.py  forms.py  grids.py  models.py  pdf.py  test_grids.py  test_models.py  urls.py  views.py
calendar_generator/migrations/: 0001_initial.py  0002_alter_day_position.py  0003_auto_20210716_0216.py  0004_auto_20210716_0216.py  0005_alter_calendar_options.py  0006_resetday.py  0007_auto_20210719_2117.py  0008_arbitrarylabel.py  0009_colorset_layout_rgbcolor.py  0010_presets.py  0011_monthlydisplayset_onepagedisplayset.py  0012_auto_20220527_0844.py  0013_auto_20220527_0903.py  0014_auto_20220527_0950.py  0015_reset_presets.py  0016_auto_20220527_1436.py  0017_new_presets.py  0018_rename_rgbcolor_color.py  0019_fix_medium_blue.py  0020_alter_color_options.py
core/: settings.py  urls.py
evaluations/: reports.py
nav/templatetags/: nav_tags.py
stored_mail/: admin.py  apps.py  jobs.py  models.py
stored_mail/management/commands/: create_example_email.py
stored_mail/migrations/: 0001_initial.py  0002_outgoingmessage_discard_after.py  0003_set_discard_after.py  0004_alter_outgoingmessage_discard_after.py
