[project]
name = "rectory-apps"
version = "0.0.0"
description = ""
authors = [{ name = "Adam Peacock", email = "adam@thepeacock.net" }]
requires-python = "<3.11,>=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "django~=4.2.11",
    "django-environ~=0.11.2",
    "django-admin-sortable2~=2.1.10",
    "whitenoise~=6.6.0",
    "gunicorn~=21.2.0",
    "django-safemigrate~=4.3",
    "django-bootstrap4~=24.1",
    "google-auth~=2.29.0",
    "requests~=2.31.0",
    "reportlab~=4.1.0",
    "django-bootstrap-breadcrumbs~=0.9.2", # Check here
    "django-anymail[mailgun]~=10.3",
    "django-lb-health-check<2.0,>=1.0",
    "django-quick-jobs>=0.4.0",
    "htmlBuilder<2.0.0,>=1.0.0",
    "structlog>=24.1.0",
    "django-solo~=2.2.0",
    "django-structlog~=8.0.0",
    "humanize~=4.9.0",
    "django-simple-history~=3.5.0",
    "pydantic<2.0.0,>=1.10.2",
    "django-hijack~=3.4.5",
    "frozendict~=2.4.1",
    "django-node-assets<1.0.0,>=0.9.13",
    "premailer<4.0.0,>=3.10.0",
    "django-braces<2.0.0,>=1.15.0",
    "openpyxl<4.0.0,>=3.1.1",
    "psycopg>=3.1.18",
]

[tool.pdm.dev-dependencies]
dev = [
    "rope>=1.13.0",
    "pytest>=8.1.1",
    "pytest-django>=4.8.0",
    "django-debug-toolbar>=4.3.0",
    "ipython>=8.23.0",
    "mypy<1.0,>=0.950",
    "black>=22.3.0",
    "django-stubs>=1.11.0",
    "django-stubs-ext>=0.8.0",
    "types-requests>=2.31.0.20240406",
]

[tool.pdm]
distribution = false


[tool.pdm.build]
includes = []


[tool.django-stubs]
django_settings_module = "core.settings"


[tool.mypy]
plugins = ["mypy_django_plugin.main"]
